# kilonova

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  ROADMAP.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
doc/: Architecture.md  CalculatedVariables.md  DeviceLogic.md  Parity.md  index.md
examples/sca/: Design.xml  demo.py
src/kilonova/: __init__.py  address_space.py  calculated.py  cli.py  config.py  design.py  dump.py  errors.py  meta.py  objects.py  oracle.py  server.py  server_config.py  users.py
src/microquasar/: __init__.py  address_space.py  calculated.py  cli.py  config.py  design.py  dump.py  errors.py  meta.py  objects.py  oracle.py  server.py
tests/: conftest.py  test_cache_variables.py  test_calculated_variables.py  test_design.py  test_instantiation.py  test_meta.py  test_methods.py  test_offload.py  test_robustness.py  test_scale.py  test_server_boot.py  test_setters.py  test_source_variables.py
tests/conformance/: test_conformance.py
tests/data/: Design.xml  config.xml
tools/: cacophony_crosscheck.py
tools/uao_client_check/: README.md  build.sh  main.cpp  serve.py
