[project]
name = "microquasar"
version = "0.1.0.dev0"
description = "Pure-Python OPC UA servers from quasar Design files — a quasar in miniature"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
authors = [{ name = "Paris Moschovakos", email = "paris@moschovakos.com" }]
keywords = ["opcua", "opc-ua", "quasar", "scada", "server"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]
dependencies = [
    "asyncua>=2.0",
    "lxml>=5",
]

[project.scripts]
microquasar = "microquasar.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
