[project]
name = "kilonova"
version = "0.1.0"
description = "Pure-Python OPC UA servers from quasar Design files — the quasarnova family's no-codegen engine"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
authors = [{ name = "Paris Moschovakos", email = "paris@moschovakos.com" }]
keywords = ["opcua", "opc-ua", "quasar", "scada", "server", "cern", "asyncua"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "asyncua>=2.0",
    "lxml>=5",
]

[project.urls]
Homepage = "https://github.com/quasarnova-team/kilonova"
Repository = "https://github.com/quasarnova-team/kilonova"
Issues = "https://github.com/quasarnova-team/kilonova/issues"

[project.scripts]
kilonova = "kilonova.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
